# aServer

./: CMakeLists.txt  MemoryChannel.cpp  MemoryChannel.h  NetClient.cpp  NetClient.h  NetServer.cpp  NetServer.h  README.md  UseEpoll.cpp  UseEpoll.h  main.cpp  theDetector.cpp  theDetector.h  xiaoMing_r.mdb1
Net/: NetClient.cpp  NetClient.h  NetServer.cpp  NetServer.h  TimeWheel.cpp  TimeWheel.h  UseEpoll.cpp  UseEpoll.h  clientBuffer.cpp  clientBuffer.h
Re3D/: base.h  commands.h  cvrender.h  def.h  re3dx.h  tracker.h
lib/: libopencv_calib3d.so.3.3  libopencv_features2d.so.3.3  libopencv_flann.so.3.3  libopencv_highgui.so.3.3  libopencv_imgcodecs.so.3.3  libopencv_videoio.so.3.3  libva.so.1
